Fixes for: - Open Map action missing (tupi) - missing label on "add attributes" in create layer - cancel in delete project removed anyway
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31364 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -287,6 +287,8 @@ deleteAttributeAction_description = Delete Attribute from Feature Type
 
 deleteAttributeAction_label = Delete Attribute
 
+addAttributeAction_label = Add Attribute
+
 deleteAttributeAction_tooltip = Delete Attribute
 
 orientation_automatic_image = split_automatic_mode.gif
