--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_de.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_de.properties
@@ -246,6 +246,8 @@ UiPreferences_advancedGraphics_label = Erweiterte Grafikfeatures (Abschalten, fa
 
 UiPreferences_description = Einstellungen f\u00FCr die Nutzeroberfl\u00E4che
 
+addAttributeAction_label = Attribut hinzuf\u00FCgen
+
 cancel_image = stop_co.gif
 
 cancel_label = Abbrechen
