--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
@@ -274,6 +274,8 @@ UiPreferences_advancedGraphics_label = Grafica Avanzata (disabilitare se non ci 
 
 UiPreferences_description = Opzioni riguardo l''aspetto dell''interfaccia grafica
 
+addAttributeAction_label = Aggiungere attributo
+
 cancel_image = stop_co.gif
 
 cancel_label = Annulla
