--- a/plugins/net.refractions.udig.project.ui.editor/plugin_it.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/plugin_it.properties
@@ -11,6 +11,7 @@ FilterDropAction.name = Filter Drop
 
 Layer.Category           = Piano
 Layer.Modify.Category    = Modifica il piano
+Layer.Name               = &Piano
 
 LayerActions.label = Azioni sui piani
 LayerActions.name  = Azioni sui piani
@@ -150,6 +151,7 @@ layerStatus.label       = Stato del Piano
 
 layerSummary = Riassunto del &Piano
 
+map.action.open.name = Apri Mappa
 map.new.label        = Nuova &Mappa
 map.new.tooltip      = Crea una Mappa vuota
 map.preferences.name = Mappa
@@ -228,4 +230,3 @@ zoomToLayer.tooltip = Zoom al piano selezionato
 
 zoomToMultipleLayers.label   = Zomm ai Piani
 zoomToMultipleLayers.tooltip = Zomm ai Piani
-Layer.Name = &Piano
