Open map added also to popup menu + moved open project set to project.ui
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31365 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin_it.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin_it.properties
@@ -151,6 +151,7 @@ layerStatus.label       = Stato del Piano
 
 layerSummary = Riassunto del &Piano
 
+map.action.open.name = Apri Mappa
 map.new.label        = Nuova &Mappa
 map.new.tooltip      = Crea una Mappa vuota
 map.preferences.name = Mappa
