fixed font on LabelBox problems. Now font scales properly between page and paper.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31383 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin_de.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_de.properties
@@ -36,3 +36,17 @@ printing.ui.preferences.name             = Druckeinstellungen
 printing.ui.templateFactories.name       = Vorlagen-Erzeuger
 
 rename = Umbenennen
+
+
+A4.landscape.template=A4 landscape Vorlage
+A3.landscape.template=A3 landscape Vorlage
+A1.landscape.template=A1 landscape Vorlage
+A0.landscape.template=A0 landscape Vorlage
+A4.portrait.template=A4 portrait Vorlage
+A3.portrait.template=A3 portrait Vorlage
+A1.portrait.template=A1 portrait Vorlage
+A0.portrait.template=A0 portrait Vorlage
+Letter.landscape.template=Letter landscape Vorlage
+Legal.landscape.template=Legal landscape Vorlage
+Letter.portrait.template=Letter portrait Vorlage
+Legal.portrait.template=Legal portrait Vorlage
