--- a/plugins/net.refractions.udig.printing.ui/plugin_it.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_it.properties
@@ -26,3 +26,18 @@ printing.ui.preferences.name             = Stampa
 printing.ui.templateFactories.name       = Template
 
 rename = Rinomina
+
+
+A4.landscape.template=modello A4 paesaggio 
+A3.landscape.template=modello A3 paesaggio
+A1.landscape.template=modello A1 paesaggio
+A0.landscape.template=modello A0 paesaggio
+A4.portrait.template=modello A4 ritratto
+A3.portrait.template=modello A3 ritratto
+A1.portrait.template=modello A1 ritratto
+A0.portrait.template=modello A0 ritratto
+Letter.landscape.template=modello Letter paesaggio
+Legal.landscape.template=modello Legal paesaggio
+Letter.portrait.template=modello Letter ritratto
+Legal.portrait.template=modello Legal ritratto
+
