spanish translation for templates
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31389 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin_es.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_es.properties
@@ -24,3 +24,20 @@ printing.ui.preferences.name             = Imprimiendo
 printing.ui.templateFactories.name       = Factor\u00EDas de Plantillas
 
 rename = Renombrar
+
+
+A4.landscape.template=modelo A4 apaisado 
+A3.landscape.template=modelo A3 apaisado
+A1.landscape.template=modelo A1 apaisado
+A0.landscape.template=modelo A0 apaisado
+A4.portrait.template=modelo A4 retrato
+A3.portrait.template=modelo A3 retrato
+A1.portrait.template=modelo A1 retrato
+A0.portrait.template=modelo A0 retrato
+
+Letter.landscape.template=modelo Carta apaisado Plantilla
+Legal.landscape.template=modelo Legal apaisado 
+Letter.portrait.template=modelo Carta retrato 
+Legal.portrait.template=modelo Legal retrato 
+
+
