spanish translation for templates (a bit correction)
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31390 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin_es.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_es.properties
@@ -34,8 +34,7 @@ A4.portrait.template=modelo A4 retrato
 A3.portrait.template=modelo A3 retrato
 A1.portrait.template=modelo A1 retrato
 A0.portrait.template=modelo A0 retrato
-
-Letter.landscape.template=modelo Carta apaisado Plantilla
+Letter.landscape.template=modelo Carta apaisado
 Legal.landscape.template=modelo Legal apaisado 
 Letter.portrait.template=modelo Carta retrato 
 Legal.portrait.template=modelo Legal retrato 
