--- a/plugins/net.refractions.udig.printing.ui/plugin_de.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_de.properties
@@ -38,15 +38,17 @@ printing.ui.templateFactories.name       = Vorlagen-Erzeuger
 rename = Umbenennen
 
 
-A4.landscape.template=A4 landscape Vorlage
-A3.landscape.template=A3 landscape Vorlage
-A1.landscape.template=A1 landscape Vorlage
-A0.landscape.template=A0 landscape Vorlage
-A4.portrait.template=A4 portrait Vorlage
-A3.portrait.template=A3 portrait Vorlage
-A1.portrait.template=A1 portrait Vorlage
-A0.portrait.template=A0 portrait Vorlage
-Letter.landscape.template=Letter landscape Vorlage
-Legal.landscape.template=Legal landscape Vorlage
-Letter.portrait.template=Letter portrait Vorlage
-Legal.portrait.template=Legal portrait Vorlage
+A4.landscape.template=A4 Breitformat
+A3.landscape.template=A3 Breitformat
+A2.landscape.template=A2 Breitformat
+A1.landscape.template=A1 Breitformat
+A0.landscape.template=A0 Breitformat
+A4.portrait.template=A4 Hochformat
+A3.portrait.template=A3 Hochformat
+A2.portrait.template=A2 Hochformat
+A1.portrait.template=A1 Hochformat
+A0.portrait.template=A0 Hochformat
+Letter.landscape.template=Letter Breitformat
+Legal.landscape.template=Legal Breitformat
+Letter.portrait.template=Letter Hochformat
+Legal.portrait.template=Legal Hochformat
