--- a/plugins/net.refractions.udig.printing.ui/plugin_es.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_es.properties
@@ -28,10 +28,12 @@ rename = Renombrar
 
 A4.landscape.template=modelo A4 apaisado 
 A3.landscape.template=modelo A3 apaisado
+A2.landscape.template=modelo A2 apaisado
 A1.landscape.template=modelo A1 apaisado
 A0.landscape.template=modelo A0 apaisado
 A4.portrait.template=modelo A4 retrato
 A3.portrait.template=modelo A3 retrato
+A2.portrait.template=modelo A2 retrato
 A1.portrait.template=modelo A1 retrato
 A0.portrait.template=modelo A0 retrato
 Letter.landscape.template=modelo Carta apaisado
