the map.new.label was added in for all languages
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31404 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui.editor/plugin_de.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/plugin_de.properties
@@ -114,6 +114,7 @@ info.tools.name    = &Informationswerkzeug
 information = &Information
 
 layer.crs.propertypage  = Koordinatenreferenzsystem
+map.new.label = Neue &Karte
 layer.new.label         = Neuer &Layer
 layer.preferences.name  = Layer
 
