--- a/plugins/net.refractions.udig.project.ui.editor/plugin_es.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/plugin_es.properties
@@ -85,6 +85,7 @@ info.tools.name    = Herramientas de &informaci\u00F3n
 information = &Informaci\u00F3n
 
 layer.crs.propertypage  = Sistema de coordenadas
+map.new.label         = Nuevo &Map
 layer.new.label         = Nueva &capa
 layer.preferences.name  = Capa
 
