--- a/plugins/net.refractions.udig.project.ui.editor/plugin_it.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/plugin_it.properties
@@ -136,6 +136,7 @@ info.tools.name    = Strumenti di &Informazione
 information = &Informazione
 
 layer.crs.propertypage  = Proiezione
+map.new.label			= Nuova &Mappa
 layer.new.label         = Nuovo &Piano
 layer.preferences.name  = Piano
 
