--- a/plugins/net.refractions.udig.project.ui.editor/plugin_ko.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/plugin_ko.properties
@@ -137,6 +137,7 @@ info.tools.name    = &\uD234 \uC815\uBCF4
 information = &\uC815\uBCF4
 
 layer.crs.propertypage  = \uD22C\uC601
+map.new.label        = \uC0C8\uB85C\uC6B4 \uC9C0\uB3C4
 layer.new.label         = \uC0C8\uB85C\uC6B4 \uB808\uC774\uC5B4
 layer.preferences.name  = \uB808\uC774\uC5B4
 
