--- a/plugins/net.refractions.udig.printing.ui/plugin_de.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin_de.properties
@@ -38,17 +38,17 @@ printing.ui.templateFactories.name       = Vorlagen-Erzeuger
 rename = Umbenennen
 
 
-A4.landscape.template=A4 Breitformat
-A3.landscape.template=A3 Breitformat
-A2.landscape.template=A2 Breitformat
-A1.landscape.template=A1 Breitformat
-A0.landscape.template=A0 Breitformat
+A4.landscape.template=A4 Querformat
+A3.landscape.template=A3 Querformat
+A2.landscape.template=A2 Querformat
+A1.landscape.template=A1 Querformat
+A0.landscape.template=A0 Querformat
 A4.portrait.template=A4 Hochformat
 A3.portrait.template=A3 Hochformat
 A2.portrait.template=A2 Hochformat
 A1.portrait.template=A1 Hochformat
 A0.portrait.template=A0 Hochformat
-Letter.landscape.template=Letter Breitformat
-Legal.landscape.template=Legal Breitformat
+Letter.landscape.template=Letter Querformat
+Legal.landscape.template=Legal Querformat
 Letter.portrait.template=Letter Hochformat
 Legal.portrait.template=Legal Hochformat
