--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -45,6 +45,8 @@ CharsetSelectionDialog_title = Select Character Set
 
 ErrorManager_very_informative_error = Error
 
+ExceptionDetailsEditorMessage = \n\nPlease use the details to explain the problem to your administrator.
+
 ExceptionDisplayer_very_informative_error = Error
 
 FeatureTableContentProvider_loadedFeatures = Loaded = 
@@ -265,16 +267,21 @@ UDIGWorkbenchWindowAdvisor_classNotFound = Unable to load class {0} for use as {
 
 UDIGWorkbenchWindowAdvisor_specifiedButNotFound = {1} "{0}" specified but no valid extension found.\nPlease check that the extension exists and that it is valid.
 
-UiPreferences_ImperialUnits=Imperial
-UiPreferences_MetricUnits=Metric
-UiPreferences_AutoUnits=Auto
-UiPreferences_UnitsLabel=Default Units:
+UiPreferences_AutoUnits = Auto
+
+UiPreferences_ImperialUnits = Imperial
+
+UiPreferences_MetricUnits = Metric
+
+UiPreferences_UnitsLabel = Default Units:
 
 UiPreferences_advancedGraphics_label = Advanced Graphics (disable if no map is displayed)
 
 UiPreferences_charset = Default Character Set
 
 UiPreferences_description = Preferences that control aspects of the UI
+
+addAttributeAction_label = Add Attribute
 
 cancel_image = stop_co.gif
 
@@ -286,8 +293,6 @@ cancel_label = Cancel
 deleteAttributeAction_description = Delete Attribute from Feature Type
 
 deleteAttributeAction_label = Delete Attribute
-
-addAttributeAction_label = Add Attribute
 
 deleteAttributeAction_tooltip = Delete Attribute
 
