--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_it.properties
@@ -44,6 +44,8 @@ ColourPaletteMasterList_schema = Schema
 
 ErrorManager_very_informative_error = Errore
 
+ExceptionDetailsEditorMessage = \n\nPer favore usi il messaggio nel pannello dei dettagli per spiegare l'errore al suo amministratore di sistema.
+
 ExceptionDisplayer_very_informative_error = Errore
 
 FeatureTableContentProvider_errorHeader = Messagio di errore
