FOR: http://jira.codehaus.org/browse/UDIG-1559 removed Alternate Map Perspective and added new StylePerspective
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31488 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/plugin_de.properties
+++ b/plugins/net.refractions.udig.ui/plugin_de.properties
@@ -13,7 +13,7 @@ UpdateActionSet.updates.label       = &Finden und installieren...
 
 add.label = &Hinzuf\u00FCgen ...
 
-alternate.perspective.name = Alternative Kartenperspektive
+style.perspective.name = Style Perspective
 
 antialiasing.tip.name = Anti-Aliasing anschalten
 antialiasing.tip.tip  = In den Rendereinstellungen (in Benutzervorgaben) k\u00F6nnen Sie das Anti-Aliasing anschalten, wodurch sich die Darstellungsqualit\u00E4t der Karten verbessert.
