--- a/plugins/net.refractions.udig.ui/plugin_es.properties
+++ b/plugins/net.refractions.udig.ui/plugin_es.properties
@@ -10,7 +10,7 @@ UpdateActionSet.updates.label       = &Encontrar e instalar...
 
 add.label = &Agregar ...
 
-alternate.perspective.name = Perspectiva de mapa alternativa
+style.perspective.name = Perspectiva de Estilo
 
 antialiasing.tip.name = Activando anti-alias
 antialiasing.tip.tip  = Puede activar el anti-alias (para una mejor apariencia de los mapas) en las Preferencias de renderizado.
