--- a/plugins/net.refractions.udig.ui/plugin_it.properties
+++ b/plugins/net.refractions.udig.ui/plugin_it.properties
@@ -17,7 +17,7 @@ UpdateActionSet.updates.label       = Trova ed installa...
 
 add.label = &Aggiungi...
 
-alternate.perspective.name = Prospettiva alternativa della mappa
+style.perspective.name = Prospettiva dello stile
 
 antialiasing.tip.name = Attivazione dell'Anti-Aliasing
 antialiasing.tip.tip  = \u00C8 possibile attivare l''Anti-Aliasing (per una miglior visualizzazione delle mappe) nelle opzioni di rendering.
