Added preference page for mouse double click speed
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31507 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin_de.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin_de.properties
@@ -204,3 +204,5 @@ zoomToLayer.tooltip = Setzt den Zoom so, da\u00DF der gesamte Layer sichtbar ist
 
 zoomToMultipleLayers.label   = Zoom auf gew\u00E4hlte Layer
 zoomToMultipleLayers.tooltip = Setzt den Zoom so, da\u00DF die gew\u00E4hlten Layer sichtbar sind
+
+tool.mouse.preferences.name = Maus
