--- a/plugins/net.refractions.udig.project.ui/plugin_es.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin_es.properties
@@ -177,3 +177,5 @@ zoomToLayer.tooltip = Ampliar a la capa seleccionda
 
 zoomToMultipleLayers.label   = Ampliar a capas
 zoomToMultipleLayers.tooltip = Ampliar a las capas selecciondas
+
+tool.mouse.preferences.name = Raton
