--- a/plugins/net.refractions.udig.project.ui/plugin_fr.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin_fr.properties
@@ -92,3 +92,5 @@ zoomToLayer.tooltip = Zoom \u00E0 la couche s\u00E9lectionn\u00E9e
 
 zoomToMultipleLayers.label   = Zoom aux couches
 zoomToMultipleLayers.tooltip = Zoom aux couches s\u00E9lectionn\u00E9es
+
+tool.mouse.preferences.name = Souris
