--- a/plugins/net.refractions.udig.project.ui/plugin_it.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin_it.properties
@@ -219,6 +219,8 @@ style.preferences.name = Stile
 tool.point            = Strumenti
 tool.preferences.name = Strumenti
 
+tool.mouse.preferences.name = Mouse
+
 urlWizard.description = Importa un URL nel catalogo
 urlWizard.name        = Apri URL
 
