--- a/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages.properties
@@ -290,3 +290,5 @@ MapSelectorPage_mapNameColumnText=Name
 MapSelectorPageWithScaleColumn_invalidScaleError=The value must be an integer greater than 0
 MapSelectorPageWithScaleColumn_defaultScale=default from map
 MapSelectorPageWithScaleColumn_Description=Select one or more maps to export
+mousePreferences_setvalue=Set double-click speed in milliseconds
+mousePreferences_title=Mouse preferences
