German translations for UDig1.2 RC1
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31509 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.ui/src/net/refractions/udig/catalog/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.catalog.ui/src/net/refractions/udig/catalog/ui/internal/messages.properties
@@ -1,10 +1,17 @@
+
+CatalogExportWizard_0 = File Exists
+
+CatalogExportWizard_OverwriteDialogQuery = File {0} exists, do you wish to overwrite the file?
+
+CatalogExportWizard_SelectFile = Select File
+
+CatalogExportWizard_UnableToDelete = Unable to delete file.  Choose a new name
+
+CatalogExportWizard_WindowTitle = Export to Shapefile
+
 CatalogExport_cannotWrite = Cannot write to file {0}
 
 CatalogExport_exportLayersTask = Export Resource to Shapefile
-CatalogExportWizard_SelectFile=Select File
-
-CatalogExportWizard_WindowTitle=Export to Shapefile
-CatalogExportWizard_UnableToDelete=Unable to delete file.  Choose a new name
 
 CatalogExport_layerFail = Failed to export layer {0}
 
@@ -13,10 +20,8 @@ CatalogExport_reprojectError = \ cannot be reprojected to chosen projection
 CatalogExport_taskName = Exporting Features
 
 CatalogExport_taskname = Exporting data
-CatalogExportWizard_0=File Exists
 
 CatalogImportDelegateWizard_windowTitle = Import from Data Sources
-CatalogExportWizard_OverwriteDialogQuery=File {0} exists, do you wish to overwrite the file?
 
 CatalogImport_monitor_task = Importing {0}
 
@@ -77,42 +82,48 @@ CountDownProgressMonitor_taskNamePart1 = Exporting
 CountDownProgressMonitor_taskNamePart2 = \ remaining: 
 
 DataBaseRegistryWizardPage_button_connect_text = Connect
+
 DataBaseRegistryWizardPage_button_connect_tooltip = Connects to the database
+
 DataBaseRegistryWizardPage_button_lookup_text = Lookup
+
 DataBaseRegistryWizardPage_button_lookup_tooltip = Lookup the names of the databases available
+
+DataBaseRegistryWizardPage_databaseMessage = Database lookup failed, please enter desired database
+
+DataBaseRegistryWizardPage_database_tooltip = The Database on the specified server.
+
+DataBaseRegistryWizardPage_host_tooltip = Name of the database host.
+
 DataBaseRegistryWizardPage_label_advanced_text = Advanced
 
 DataBaseRegistryWizardPage_label_advanced_tooltip = Show Advanced Settings
 
 DataBaseRegistryWizardPage_label_database_text = Database:
 
-DataBaseRegistryWizardPage_database_tooltip = The Database on the specified server.
-
 DataBaseRegistryWizardPage_label_host_text = Host:
-
-DataBaseRegistryWizardPage_host_tooltip = Name of the database host.
 
 DataBaseRegistryWizardPage_label_password_text = Password:
 
-DataBaseRegistryWizardPage_password_tooltip = Password for the user on the server.
-
 DataBaseRegistryWizardPage_label_port_text = Port:
 
-DataBaseRegistryWizardPage_port_tooltip = Port to connect to the database host on.
-
 DataBaseRegistryWizardPage_label_recent_text = Recent Connections
-DataBaseRegistryWizardPage_recent_tooltip = This is a list of saved connections.
 
 DataBaseRegistryWizardPage_label_schema_text = Schema:
 
-DataBaseRegistryWizardPage_schema_tooltip = The Schema in the specified database.
-
 DataBaseRegistryWizardPage_label_username_text = Username:
 
-DataBaseRegistryWizardPage_username_tooltip = Username for the server.
+DataBaseRegistryWizardPage_password_tooltip = Password for the user on the server.
+
+DataBaseRegistryWizardPage_port_tooltip = Port to connect to the database host on.
+
+DataBaseRegistryWizardPage_recent_tooltip = This is a list of saved connections.
 
 DataBaseRegistryWizardPage_schemaMessage = Schema lookup failed, please enter desired schema
-DataBaseRegistryWizardPage_databaseMessage = Database lookup failed, please enter desired database
+
+DataBaseRegistryWizardPage_schema_tooltip = The Schema in the specified database.
+
+DataBaseRegistryWizardPage_username_tooltip = Username for the server.
 
 DataSourceSelectionPage_defaultMessage = Select a Data Source to import from
 
@@ -134,14 +145,25 @@ DependencyQueryPreferencePage_notValid = Installed file is not valid, choose a n
 
 DependencyQueryPreferencePage_restartNeeded = Restarting the application is required for changes to take effect.
 
-DependencyQueryPreferencePage_restartQuestion = \nDo you wish to restart now?
+DependencyQueryPreferencePage_restartQuestion = \r\n\
+Do you wish to restart now?
 
 DependencyQueryPreferencePage_restartTitle = Restart Application
 
-FileConnectionPage_taskname = Importing Layer
-FileConnectionPage_waitMessage=Please wait; loading the following resources
+ExportPage_Browse = Browse...
 
-LayerSelectionPage_message = Select one or more resources to export to shapefile.\nClick on the Projection to change destination Projection.
+ExportPage_Destination = Destination folder:
+
+ExportPage_ExportDir = Select the export directory
+
+ExportPage_ResourceList = Resource List:
+
+FileConnectionPage_taskname = Importing Layer
+
+FileConnectionPage_waitMessage = Please wait; loading the following resources
+
+LayerSelectionPage_message = Select one or more resources to export to shapefile.\r\n\
+Click on the Projection to change destination Projection.
 
 LayerSelectionPage_title = Layer Selection
 
@@ -167,32 +189,50 @@ OpenFilePage_pageTitle = OpenFiles
 
 ReprojectingFeatureCollection_transformationError = Unable to transform geometry 
 
+ReshapeOperation_2 = Unknown Error
+
+ReshapeOperation_3 = Error occurred processing request:\r\n\
+{0}
+
+ReshapeOperation_4 = Attribute "{0}" is assigned to an non-existant attribute: "{1}"
+
+ReshapeOperation_5 = An error occurred when trying to create the attribute type for attribute: {0}
+
+ReshapeOperation_6 = The attribute {0} was defined twice this is not legal
+
+ReshapeOperation_DialogText = Reshape Contents
+
+ReshapeOperation_createTempSpaceTask = Create scratch space
+
+ReshapeOperation_noAction = Add to Catalog
+
+ReshapeOperation_task = processing
+
 ResolveContentProvider_searching = Searching for contents...
 
 ResolveLabelProvider_missingText = Unknown element
 
 ResolveTitlesDecorator_0 = Obtaining icon and label data for
 
+ResourceSelectionPage_NumLayersSelected = Resources Selected: {0} 
+
 ResourceSelectionPage_brokenReportError = Unable to connect to service: 
-ResourceSelectionPage_NumLayersSelected=Resources Selected: {0} 
 
 ResourceSelectionPage_brokenUnknown = Unable to connect to service, cause unknown, perhaps server is down?
-ReshapeOperation_createTempSpaceTask=Create scratch space
 
 ResourceSelectionPage_connectedButNoResources = Unable to connect to service; cause unknown, perhaps server is down?
+
+ResourceSelectionPage_description = Select data to add to map
 
 ResourceSelectionPage_message = Please select a resource.
 
 ResourceSelectionPage_noPermission = You do not have permission to access this service
 
 ResourceSelectionPage_noServices = Unable to recognize service, choose another
-ResourceSelectionPage_description=Select data to add to map
 
 ResourceSelectionPage_searching = Searching for Resources
 
 ResourceSelectionPage_title = Resource Selection
-ReshapeOperation_DialogText=Reshape Contents
-ReshapeOperation_noAction=Add to Catalog
 
 ResourceSelectionState_stateName = Resource Selection
 
@@ -208,7 +248,6 @@ SearchView_description = Description: {0}
 
 SearchView_keywords = Keywords:
 
-
 SearchView_name = Name: {0} ({1})
 
 SearchView_prompt = Search String:
@@ -222,6 +261,8 @@ SearchView_server = Server: {0}
 SearchView_title = Title: {0}
 
 WorkflowWizardDialog_importTask = Import Data
+
+WorkflowWizard_PageTransitionError = An error occurred during page transition.  This is most likely a programming error.  Please report it.
 
 WorkflowWizard_noPage = No page corresponding to workflow state.
 
@@ -260,9 +301,3 @@ action_remove_image = remove_co.gif
 action_remove_label = Remove
 
 action_remove_tooltip = Remove
-ReshapeOperation_task=processing
-ReshapeOperation_2=Unknown Error
-ReshapeOperation_3=Error occurred processing request:\n{0}
-ReshapeOperation_4=Attribute "{0}" is assigned to an non-existant attribute: "{1}"
-ReshapeOperation_5=An error occurred when trying to create the attribute type for attribute: {0}
-ReshapeOperation_6=The attribute {0} was defined twice this is not legal
