--- a/plugins/net.refractions.udig.project/src/net/refractions/udig/project/internal/messages.properties
+++ b/plugins/net.refractions.udig.project/src/net/refractions/udig/project/internal/messages.properties
@@ -37,7 +37,9 @@ CopyFeaturesCommand_undo = Undo
 
 CreateFeatureCommand_createFeature = Create Feature
 
-CreateFeatureCommand_error_message = No selecteable layer in the map.\n\nMark a layer  
+CreateFeatureCommand_error_message = No selecteable layer in the map.\r\n\
+\r\n\
+Mark a layer  
 
 CreateFeatureCommand_error_title = Error
 
@@ -62,6 +64,22 @@ DeleteLayerCommand_deleteLayer = Delete Layer: {0}
 DeleteLayersCommand_name = Delete layers from the map
 
 DeleteManyFeaturesCommand_name = Delete Multiple Features
+
+ExportProjectWizard_Destination2 = Select the destination to export to
+
+ExportProjectWizard_Exporting = Exporting project 
+
+ExportProjectWizard_Title = Project Export Wizard
+
+ExportSelectionPage_Destination = Destination:
+
+ExportSelectionPage_ExportProject = Export the selected project
+
+ExportSelectionPage_MissingDir = Please select a directory to export the project into
+
+ExportSelectionPage_Project = Project:
+
+ExportSelectionPage_SelectProject = Please select a project to export
 
 FIDSelectCommand_featureSelection = Feature Selection
 
