--- a/plugins/net.refractions.udig.catalog.shp/plugin_de.properties
+++ b/plugins/net.refractions.udig.catalog.shp/plugin_de.properties
@@ -1,4 +1,8 @@
 
+Shapefile.Operations = Shapefile-Funktionen
+
+changeCharset = Zeichenkodierung \u00E4ndern
+
 fileService.name = Shapefiles
 
 plugin.name = Plugin f\u00FCr Shapefile-Unterst\u00FCtzung
@@ -6,5 +10,6 @@ plugin.name = Plugin f\u00FCr Shapefile-Unterst\u00FCtzung
 preferences.shapefile.name = Shapefile
 
 wizard.description = \u00D6ffnet ein Shapefile.
+wizard.name        = Shapefile
 
-wizard.name = Shapefile
+writePRJ = Kartenprojektion setzen
