--- a/plugins/net.refractions.udig.issues/plugin_de.properties
+++ b/plugins/net.refractions.udig.issues/plugin_de.properties
@@ -1,4 +1,6 @@
 
+Add.Task = Features zur Aufgabe
+
 issues.list.memory.name = Verwaltung nur im Speicher
 issues.list.wfs.name    = Verwaltung durch PostGIS
 issues.name             = Standard-Probleme
