--- a/plugins/net.refractions.udig.render.gridcoverage.basic/plugin_de.properties
+++ b/plugins/net.refractions.udig.render.gridcoverage.basic/plugin_de.properties
@@ -1,4 +1,9 @@
 
+mosaicInfoView.name = Mosaik-Informationen
+
+mosaicinfo.name    = Mosaikinfo
+mosaicinfo.tooltip = Informationen \u00FCber eine Mosaik-Bilddatei
+
 plugin.name = Standard-Renderer f\u00FCr Raster (Grid Coverages)
 
 renderer.desc = Standard-Renderer f\u00FCr Geotools Grid Coverage
