--- a/plugins/net.refractions.udig.render.wms.basic/plugin_de.properties
+++ b/plugins/net.refractions.udig.render.wms.basic/plugin_de.properties
@@ -5,3 +5,5 @@ plugin.name = Standard-Renderer f\u00FCr WMS
 
 renderer.desc = WMS-Client.
 renderer.name = WMS-Renderer
+
+wmscPref.name = WMS-C-Kacheln
