Fixes for the runtime preferences, which for some reason were absolutely not working. Seems they were never tested. Workspace, Memory and Language tested.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31530 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages.properties
@@ -169,22 +169,14 @@ PlatformGIS_background = Run In Background
 
 RunOperationDialog_run_operation = Run Operation
 
-RunntimeFieldEditor_error = Error
-
-RunntimeFieldEditor_locale = Locale for user interface
-
-RunntimeFieldEditor_maxheap = Maximum heap memory in megabytes
-
-RunntimeFieldEditor_memory_positive = The memory value has to be a positive number bigger than 64.
-
-RunntimeFieldEditor_path_not_existing = The path to the workspace has to be an existing folder.
-
-RunntimeFieldEditor_restart = Restart with the above settings.
-
-RunntimeFieldEditor_workspace_path = Workspace path
-
-RunntimePreferences_desc = Gives the possibility to set some of the runtime preferences.
-
+RuntimeFieldEditor_error = Error
+RuntimeFieldEditor_locale = Locale for user interface
+RuntimeFieldEditor_maxheap = Maximum heap memory in megabytes
+RuntimeFieldEditor_memory_positive = The memory value has to be a positive number bigger than 64.
+RuntimeFieldEditor_path_not_existing = The path to the workspace has to be an existing folder.
+RuntimeFieldEditor_restart = Restart with the above settings.
+RuntimeFieldEditor_workspace_path = Workspace path
+RuntimePreferences_desc = Gives the possibility to set some of the runtime preferences.
 SendLogDialog_contact = Contact:
 
 SendLogDialog_contact_message = Please provide your contact information.
