--- a/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_de.properties
+++ b/plugins/net.refractions.udig.ui/src/net/refractions/udig/ui/internal/messages_de.properties
@@ -168,21 +168,21 @@ PlatformGIS_background = Im Hintergrund ausf\u00FChren
 
 RunOperationDialog_run_operation = Operation ausf\u00FChren
 
-RunntimeFieldEditor_error = Fehler
+RuntimeFieldEditor_error = Fehler
 
-RunntimeFieldEditor_locale = Sprache f\u00FCr die Benutzeroberfl\u00E4che
+RuntimeFieldEditor_locale = Sprache f\u00FCr die Benutzeroberfl\u00E4che
 
-RunntimeFieldEditor_maxheap = Maximal erlaubter Heap-Speicherverbrauch [MB]
+RuntimeFieldEditor_maxheap = Maximal erlaubter Heap-Speicherverbrauch [MB]
 
-RunntimeFieldEditor_memory_positive = Der Speicherwert mu\u00DF eine nat\u00FCrliche Zahl > 64 sein.
+RuntimeFieldEditor_memory_positive = Der Speicherwert mu\u00DF eine nat\u00FCrliche Zahl > 64 sein.
 
-RunntimeFieldEditor_path_not_existing = Der angegebene Arbeitspfad mu\u00DF existieren.
+RuntimeFieldEditor_path_not_existing = Der angegebene Arbeitspfad mu\u00DF existieren.
 
-RunntimeFieldEditor_restart = Mit den obigen Einstellungen neustarten.
+RuntimeFieldEditor_restart = Mit den obigen Einstellungen neustarten.
 
-RunntimeFieldEditor_workspace_path = Arbeitspfad
+RuntimeFieldEditor_workspace_path = Arbeitspfad
 
-RunntimePreferences_desc = Erm\u00F6glicht das \u00C4ndern einiger Laufzeiteinstellungen.
+RuntimePreferences_desc = Erm\u00F6glicht das \u00C4ndern einiger Laufzeiteinstellungen.
 
 SendLogDialog_contact = Kontakt:
 
