--- a/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages_de.properties
+++ b/plugins/net.refractions.udig.project.ui/src/net/refractions/udig/project/ui/internal/messages_de.properties
@@ -143,7 +143,7 @@ IGeoResourcePropertySource_data = Daten
 
 IGeoResourcePropertySource_schema = Schema
 
-ImageExportPage_AspectRatioCheck = Baibehalten des L\u00E4ngenverh\u00E4ltnisses
+ImageExportPage_AspectRatioCheck = Beibehalten des Seitenverh\u00E4ltnisses
 
 ImageExportPage_FormatLabel = Format:
 
